Docker and Letsencrypt now working

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -2,10 +2,6 @@ server {
   listen 80;
   server_name bibcat.org;
  
-  location /.well-known/acme-challenge/ {
-    root /var/www/letsencrypt;
-  }
- 
   location / {
     return 301 https://$host$request_uri;
   }
@@ -14,8 +10,8 @@ server {
 server {
   listen 443 ssl;
  
-  ssl_certificate certs/live/bibcat.org/fullchain.pem;
-  ssl_certificate_key certs/live/bibcat.org/privkey.pem;
+  ssl_certificate /etc/nginx/ssl/fullchain.pem;
+  ssl_certificate_key /etc/nginx/ssl/privkey.pem;
  
   server_name bibcat.org;
  
