--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,15 @@ version: '2'
 services:
   proxy: 
     build: ./nginx
-    volumes:
-      - letsencrypt_certs:/etc/nginx/certs
-      - letsencrypt_www:/var/www/letsencrypt
     links:
-      - app:bibcat
+      - bibcat:bibcat
     ports:
       - "80:80"
       - "443:443"
     restart: always
-
-  letsencrypt:
-    build: ./certbot
-    command: /bin/true
-    volumes:
-      - letsencrypt_certs:/etc/nginx/certs
-      - letsencrypt_www:/var/www/letsencrypt
 
   bibcat:
     build: .
     ports:
      - "5000:5000"
     restart: always
-
-volumes:
-  letsencrypt_certs: ~
-  letsencrypt_www: ~ 
