added new volumes for certbot

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,7 +1,12 @@
 server {
   listen 80;
   server_name bibcat.org;
- 
+
+  location ^~ /.well-known {
+        allow all;
+        root  /data/letsencrypt/;
+   }
+
   location / {
     return 301 https://$host$request_uri;
   }
@@ -10,8 +15,9 @@ server {
 server {
   listen 443 ssl;
  
-  ssl_certificate /etc/nginx/ssl/fullchain.pem;
-  ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/bibcat.org/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/bibcat.org/privkey.pem;
+  ssl_trusted_certificate /etc/letsencrypt/live/bibcat.org/chain.pem;
  
   server_name bibcat.org;
  
