--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - certs: /etc/letsencrypt
+      - certs-data: /data/letsencrypt 
     restart: always
 
   bibcat:
